--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
                 <img src="img/Me2.jpeg">
                 <h1 class="text-light"><a href="index.html">Zulfaa Arend</a></h1>
                 <div class="social-links mt-3 text-center">
-                    <a href="https://www.facebook.com/profile.php?id=100006946243283" class="facebook"><i
+                    <a href="https://www.facebook.com/profile.php?id=100006946243283" class="facebook" target="_blank"><i
                             class="bx bxl-facebook"></i></a>
-                    <a href="https://www.instagram.com/arendsavahl/" class="instagram"><i
+                    <a href="https://www.instagram.com/arendsavahl/" class="instagram" target="_blank"><i
                             class="bx bxl-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/zulfaa-arend-a98145154/" class="linkedin"><i
-                            class="bx bxl-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/zulfaa-arend-a98145154/" class="linkedin" target="_blank">
+                        <i                            
+                        class="bx bxl-linkedin"></i></a>
                 </div>
             </div>
 
@@ -74,7 +75,7 @@
         <div class="hero-container" data-aos="fade-in">
             <h1>Zulfaa Arend</h1>
             <p>I'm <span class="typed"
-                    data-typed-items=" a Aspring Developer, a Systems Manager, a Software Engineer"></span>
+                    data-typed-items=" a Aspring Developer, a Systems Manager, a Business Analyst"></span>
             </p>
         </div>
     </section><!-- End Hero -->
@@ -87,10 +88,7 @@
 
                 <div class="section-title">
                     <h2>About</h2>
-                    <p>Detail-orientated Senior Manager with 5+ years of extensive experience. Possessing a strong
-                        administration background, establishing procedures and processes within the company. Highly
-                        professional attitude, excellent analytical skills, strong attention to detail, and ability to
-                        work in team environments. </p>
+                    <p>Detail-orientated Senior Manager with 8+ years of extensive experience. Proven track record in establishing and optimizing procedures and processes. Possesses a highly professional attitude, exceptional analytical skills, and a strong focus on detail. Effective team player with excellent communication skills. </p>
                 </div>
 
                 <div class="row">
@@ -101,8 +99,7 @@
                         <h3>Business Process Systems Manager.</h3>
                         <p class="fst-italic">
                             Zulfaa Arend is a Business Process Systems Manager for the world’s leading marketplace for
-                            surplus business assets. An aspiring full-stack web developer & software engineer, currently
-                            studying part-time. .
+                            surplus business assets.
                         </p>
                         <div class="row">
                             <div class="col-lg-6">
@@ -135,28 +132,15 @@
                             </div>
                         </div>
                         <p>
-                            Zulfaa Arend is a Business Process Systems Manager for the world’s leading marketplace for
-                            surplus business assets. An aspiring full-stack web developer & software engineer, currently
-                            studying part-time.
+                            Currently serving as a Business Process Systems Manager for the world’s leading marketplace for surplus business assets, I am responsible for ensuring that all processes and systems are optimized to improve efficiency. In addition to my current role, I am also an aspiring software engineer, studying part-time to enhance my skills.
                         </p>
                         <p>
-                            In 2016 she began her journey in the legal department as a new graduate. Zulfaa completed
-                            her National Diploma in office management and technology in the year 2014 at the Cape
-                            Peninsula University of Technology.
+                            My journey began in the legal department as a new graduate in 2016. Since then, I have completed my National Diploma in Office Management and Technology at the Cape Peninsula University of Technology in 2014. In 2015, I completed a short course program in Autocad Software (Computer-Aided Design), and in 2017, I completed a short accounting course in Bookkeeping and Pastel Accounting at the same university. In 2019, I completed my FETC in Real Estate, Level 4, and I am currently an intern property agent at Liquidity Services SA.
                         </p>
                         <p>
-                            The following year in 2015 she completed a short course program – Autocad Software
-                            (Computer-Aided Design). In the year 2017, she completed a short accounting course:
-                            Bookkeeping and Pastel Accounting at Cape Peninsula University of Technology. In the year
-                            2019, she completed her FETC in Real Estate, Level 4, and is currently an intern property
-                            agent at Liquidity Services SA.
+                            In my personal life, I live by two quotes that guide me in my professional and personal development: “Don’t strive to be superior to others; strive to be better than you were yesterday” and “Seek knowledge from the cradle to the grave”. I believe that these quotes have shaped me into the driven individual that I am today.                        
                         </p>
-                        <p>
-                            Zulfaa lives by these two quotes:
-                            “Don’t strive to be superior to others; strive to be better than you were yesterday.”
-                            “Seek knowledge from the cradle to the grave”
-                        </p>
-                    </div>
+                                           </div>
                 </div>
 
             </div>
@@ -175,7 +159,7 @@
                         <h3 class="resume-title">Sumary</h3>
                         <div class="resume-item pb-0">
                             <h4>Zulfaa Arend</h4>
-                            <p><em>Detail-orientated Business Process Systems Manager with 5+ years of extensive
+                            <p><em>Detail-orientated Business Process Systems Manager with 8+ years of extensive
                                     experience.
                                     Possessing a strong administration background, establishing procedures and processes
                                     within the
